# OpenNJet-telemetry

./: Dockerfile_centos  Dockerfile_centos_otel  Dockerfile_ubuntu  LICENSE  NOTICE  README.md  build.sh  run.sh
base_telemetry_lib/: Dockerfile_centos  Dockerfile_ubuntu  build_docker.sh
base_telemetry_lib/opentelemetry-cpp/: CMakeLists.txt
base_telemetry_lib/opentelemetry-cpp/ci/: do_ci.ps1  docfx.cmd  install_windows_bazelisk.ps1  install_windows_protobuf.ps1  setup_windows_ci_environment.ps1  setup_windows_cmake.ps1
base_telemetry_lib/opentelemetry-cpp/cmake/: opentelemetry-proto.cmake
base_telemetry_lib/opentelemetry-cpp/exporters/: CMakeLists.txt
base_telemetry_lib/opentelemetry-cpp/exporters/otlp/: CMakeLists.txt
base_telemetry_lib/opentelemetry-cpp/tools/: build-bazel.cmd  build-benchmark.cmd  build-clang-12.cmd  build-clang.cmd  build-docker.cmd  build-nuget.cmd  build-nuget.ps1  build-vs2015.cmd  build-vs2017.cmd  build-vs2019.cmd  build.cmd  download.cmd  download.ps1  git-cl.cmd  install-vs-addons.cmd  install_llvm-win32.ps1  install_llvm-win64.ps1  setup-buildtools.cmd  setup-devenv.cmd  vcvars.cmd
base_telemetry_lib/otel-webserver-module/: Dockerfile  build.gradle  build_docker.sh
base_telemetry_lib/otel-webserver-module/include/core/: module_version.h
base_telemetry_lib/otel-webserver-module/include/core/api/: ApiUtils.h  Interface.h  WSAgent.h
base_telemetry_lib/otel-webserver-module/src/: build.gyp
base_telemetry_lib/otel-webserver-module/src/core/api/: ApiUtils.cpp  WSAgent.cpp  opentelemetry_njt_api.cpp
base_telemetry_lib/util/cmake-3.14.0-Linux-x86_64/doc/cmake/html/: genindex.html  index.html  search.html
base_telemetry_lib/util/cmake-3.14.0-Linux-x86_64/doc/cmake/html/command/: add_compile_options.html  add_custom_command.html  add_definitions.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  build_name.html  ctest_coverage.html  ctest_memcheck.html  ctest_upload.html  define_property.html  else.html  enable_language.html  enable_testing.html  endforeach.html  endfunction.html  endmacro.html  endwhile.html  execute_process.html  file.html  find_file.html  find_library.html  find_package.html  fltk_wrap_ui.html  get_directory_property.html  get_source_file_property.html  get_test_property.html  include_external_msproject.html  include_regular_expression.html  install.html  install_files.html  install_programs.html  install_targets.html  macro.html  make_directory.html  mark_as_advanced.html  message.html  remove.html  separate_arguments.html  (+14 more)
base_telemetry_lib/util/cmake-3.14.0-Linux-x86_64/man/man1/: cmake.1  cpack.1  ctest.1
base_telemetry_lib/util/cmake-3.14.0-Linux-x86_64/man/man7/: cmake-file-api.7  cmake-generator-expressions.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-qt.7  cmake-toolchains.7  cpack-generators.7
baselibs/centos/: libapr-1.so.0
baselibs/ubuntu/: libaprutil-1.so.0
njet_otel_module/: CMakeLists.txt
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/nostd/internal/absl/: .clang-format  README.md
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/proto/collector/trace/v1/: trace_service.grpc.pb.h
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/proto/common/v1/: common.pb.cc  common.pb.h
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/proto/logs/v1/: logs.pb.cc  logs.pb.h
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/proto/metrics/v1/: metrics.pb.cc  metrics.pb.h
njet_otel_module/opentelemetry/1.2.0/include/opentelemetry/proto/trace/v1/: trace.pb.cc  trace.pb.h
njet_otel_module/src/: agent_config.cpp  agent_config.h  location_config.h  njt_config.cpp  njt_config.h  njt_otel_module.cpp  njt_otel_module_modules.c  njt_utils.h  propagate.cpp  propagate.h  script.cpp  script.h  trace_context.cpp  trace_context.h
njet_otel_module/src/njet-dyn-otel-module/: config
njet_otel_module/src/njet-dyn-otel-module/src/: njt_agent_dyn_telemetry.cpp  njt_agent_dyn_telemetry_module_modules.c  njt_dyn_telemetry_parser.c  njt_dyn_telemetry_parser.h
njet_otel_webserver_module/: CMakeLists.txt  config  njt.cmake
njet_otel_webserver_module/conf/: opentelemetry_module.conf  opentelemetry_sdk_log4cxx.xml
njet_otel_webserver_module/include/core/api/: ApiUtils.h  Interface.h  WSAgent.h  opentelemetry_njt_api.h
njet_otel_webserver_module/src/: njt_http_opentelemetry_log.c  njt_http_opentelemetry_log.h  njt_http_opentelemetry_module.c  njt_http_opentelemetry_module.h  njt_http_opentelemetry_module_modules.c
njet_otel_webserver_module/src/njet-dyn-otel-webserver-module/: config
njet_otel_webserver_module/src/njet-dyn-otel-webserver-module/src/: njt_agent_dyn_otel_webserver.c  njt_agent_dyn_otel_webserver_module_modules.c  njt_dyn_telemetry_ws_parser.c  njt_dyn_telemetry_ws_parser.h
(+695 files in other folders)
